2013-10-14
MultiRankSeq 1.0.0: First version for paper.

2013-10-07
MultiRankSeq 0.1.2: Example data and example codes were added.

2013-10-05
MultiRankSeq 0.1.1: Help files were added.

2013-10-01
MultiRankSeq 0.1.0: First version for test.