@@ -1,8 +1,8 @@
 Package: MultiRankSeq
 Type: Package
 Title: MultiRankSeq
-Version: 1.1.0
-Date: 2014-01-01
+Version: 1.1.1
+Date: 2014-01-29
 Author: Shilin Zhao, Yan Guo
 Maintainer: Shilin Zhao <zhaoshilin@gmail.com>
 Description: MultiRankSeq package provides a rank sum approach using multiple
@@ -16,5 +16,3 @@ Depends:
     baySeq,
     VennDiagram,
     knitr
-Collate:
-    'MultiRankSeqFunctions.R'
