@@ -20,18 +20,30 @@ h2 {
 <body>
 
 <p>This is a report generated by MultiRankSeq package.</p>
+<div><h2 id="M50">Command</h2>
+<p>Here is the commands to generate this report:</p>
+<div class="source">
+<!--begin.rcode command,echo=F,results='asis'
+temp<-history1()
+cat(temp)
+end.rcode-->
+</div>
 <div><h2 id="M100">Overview</h2>
 <p>Counts (Top 6 rows will be displayed):</p>
+<div class="source">
 <!--begin.rcode overview1,echo=F
   head(rawCounts)
 end.rcode-->
+</div>
 <p>Groups (The samples labeled by 0 will be compared with samples labeled by 1):</p>
+<div class="source">
 <!--begin.rcode overview2,echo=F
   group1<-group
   names(group1)<-colnames(rawCounts)
   group1
   rm(group1)
 end.rcode-->
+</div>
 <div><h2 id="M150">Distribution</h2>
 <p>Heatmap:</p>
 <!--begin.rcode heatmap, cache=F,width='0.45\\linewidth',fig.show='hold',echo=F
@@ -60,9 +72,11 @@ end.rcode-->
 
 <div><h2 id="M200">Difference</h2>
 <p>Results from DESeq, edgeR and baySeq (Top 6 rows will be displayed):</p>
+<div class="source">
 <!--begin.rcode overviewDiff,echo=F
   head(diffResult)
 end.rcode-->
+</div>
 The results were saved in <a href=
 <!--begin.rcode diffResultFileLink, echo=F,results='asis'
 	cat(paste(output,".diff",".csv",sep=""))
