@@ -1,3 +1,6 @@
+2014-01-29
+MultiRankSeq 1.1.1: Improved based on the reviewer's comments.
+
 2013-10-14
 MultiRankSeq 1.0.0: First version for paper.
 
